--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1,4 +1,7 @@
 /* Colors */
+/* Trans */
+/* Shadow */
+/* Gradient */
 /* Breakpoints */
 /* Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
@@ -163,6 +166,9 @@ h6 {
   background-color: #272829;
   color: #f5f7f8;
 }
+.primary-button.transp:hover {
+  background-color: rgba(244, 207, 20, 0.168627451);
+}
 
 .container {
   width: 100%;
@@ -319,6 +325,7 @@ body {
   gap: 12rem;
   margin: 12rem 10rem 20rem 10rem;
   position: relative;
+  align-items: center;
 }
 .hero-component .hero-title {
   width: 20%;
@@ -327,6 +334,9 @@ body {
   font-size: 6rem;
   margin-bottom: 3.6rem;
   font-weight: bold;
+}
+.hero-component .hero-title.about-us-title {
+  width: 100%;
 }
 .hero-component .hero-text {
   line-height: 4rem;
@@ -355,6 +365,9 @@ body {
   max-height: 24rem;
   height: 100%;
   z-index: -1;
+}
+.hero-component.left-img {
+  flex-direction: row-reverse;
 }
 .hero-component .buttons-container {
   display: flex;
@@ -484,4 +497,141 @@ body {
   max-height: 100%;
   transition: all 0.2s ease 0.15s;
   border-bottom: 1px solid #f4ce14;
+}
+
+.team-component {
+  margin-bottom: 25rem;
+}
+.team-component .team-intro {
+  text-align: center;
+  margin-bottom: 8rem;
+}
+.team-component .title {
+  font-size: 5rem;
+  color: #f5f7f8;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+}
+.team-component .subtitle {
+  margin-top: 2rem;
+}
+.team-component .member-card {
+  position: relative;
+  overflow: hidden;
+  border-radius: 2rem;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
+  border-right: 0.05rem solid #f4ce14;
+  border-bottom: 0.05rem solid #f4ce14;
+}
+.team-component .member-card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0) linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.7) 80%);
+  z-index: 0;
+}
+.team-component .member-card .member-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.team-component .member-card .member-img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: transform 2s ease;
+  backface-visibility: hidden;
+  position: relative;
+  z-index: -1;
+}
+.team-component .member-card .member-description {
+  position: absolute;
+  bottom: 0rem;
+  color: #f5f7f8;
+  transition: background-color 1.5s ease;
+  padding: 2rem 3rem;
+}
+.team-component .member-card .member-title {
+  transition: color 1s ease;
+  margin-bottom: 1rem;
+  font-size: 2.4rem;
+  font-weight: bold;
+}
+.team-component .member-card .member-job {
+  font-size: 1.6rem;
+  margin-bottom: 0.5rem;
+  color: #f5f7f8;
+  margin-bottom: 2rem;
+}
+.team-component .member-card .member-details {
+  max-height: 0;
+  opacity: 0;
+  transition: max-height 1.5s ease, opacity 1s ease;
+}
+.team-component .member-card:hover .member-details {
+  max-height: 20rem;
+  opacity: 1;
+}
+.team-component .member-card:hover .member-description {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.team-component .member-card:hover .member-img {
+  transform: scale(1.2);
+  z-index: -1;
+}
+.team-component .member-card .member-details-content {
+  font-size: 1.4rem;
+}
+.team-component .member-card .member-read-more {
+  background: black;
+  color: #f5f7f8;
+  display: block;
+  padding: 0.4rem 1rem 0.4rem 1rem;
+  border-radius: 0.3rem;
+  margin-top: 2rem;
+  border: 1px solid #424141;
+  font-size: 1.4rem;
+  backface-visibility: hidden;
+  text-decoration: none;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: auto;
+  position: relative;
+  z-index: 5;
+  margin-right: 1rem;
+}
+.team-component .member-card .member-read-more i {
+  position: relative;
+  left: 0.2rem;
+  color: #f5f7f8;
+  transition: left 0.5s ease, color 0.6s ease;
+  backface-visibility: hidden;
+}
+.team-component .member-card .member-read-more:hover {
+  border: 1.5px solid #f4ce14;
+}
+.team-component .member-card .member-read-more:hover i {
+  left: 0.5rem;
+  color: #f4ce14;
+}
+.team-component .team-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  border-radius: 0.5rem;
+}
+.team-component .members {
+  display: grid;
+  grid-auto-rows: 50rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2rem 3rem;
 }/*# sourceMappingURL=main.css.map */
