--- a/src/scss/components/_faq.scss
+++ b/src/scss/components/_faq.scss
@@ -1,5 +1,10 @@
 .faq-component {
   margin-bottom: 20rem;
+  padding: 0 2rem;
+
+  @media screen and (max-width: $sm-screen) {
+    margin-bottom: 10rem;
+  }
 
   .faq-title {
     font-size: 4.8rem;
@@ -8,8 +13,9 @@
     line-height: 6rem;
     font-weight: bold;
 
-    @media screen and (max-width: 640px) {
+    @media screen and (max-width: $sm-screen) {
       font-size: 3rem;
+      margin-bottom: 4rem;
     }
   }
 
@@ -17,7 +23,7 @@
     width: 70%;
     margin: 0 auto;
 
-    @media screen and (max-width: 1024px) {
+    @media screen and (max-width: $lg-screen) {
       width: 100%;
     }
 
@@ -67,7 +73,8 @@
 
         .faq-text {
           padding: 1rem 0 2rem 5rem;
-          @media screen and (max-width: 640px) {
+
+          @media screen and (max-width: $sm-screen) {
             font-size: 1.6rem;
           }
         }
