--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -4,6 +4,28 @@
   margin: 12rem 10rem 20rem 10rem;
   position: relative;
   align-items: center;
+  padding: 0 2rem;
+
+  @media screen and (max-width: $lg-screen-max) {
+    margin: 12rem 0 20rem 0;
+    gap: 2rem;
+  }
+
+  @media screen and (max-width: $sm-screen-max) {
+    margin: 8rem 0 15rem 0;
+    flex-direction: column;
+    gap: 8rem;
+  }
+
+  @media screen and (max-width: $sm-screen) {
+    margin: 8rem 0 10rem 0;
+  }
+
+  .hero-description {
+    @media screen and (max-width: $sm-screen-max) {
+      text-align: center;
+    }
+  }
 
   .hero-title {
     width: 20%;
@@ -16,15 +38,32 @@
     &.about-us-title {
       width: 100%;
     }
+
+    @media screen and (max-width: $sm-screen-max) {
+      width: 100%;
+    }
+
+    @media screen and (max-width: $sm-screen) {
+      font-size: 4rem;
+    }
   }
 
   .hero-text {
     line-height: 4rem;
     margin-bottom: 3.6rem;
+
+    @media screen and (max-width: $sm-screen) {
+      font-size: 1.6rem;
+    }
+  }
+
+  .primary-button {
+    @media screen and (max-width: $sm-screen) {
+      font-size: 1.4rem;
+    }
   }
 
   .hero-img {
-    border: 2px solid $primary-color;
     border-radius: 3rem;
     max-width: 40rem;
     width: 100%;
@@ -33,6 +72,7 @@
 
     img {
       border-radius: 3rem;
+      border: 2px solid $primary-color;
       width: 100%;
       height: 100%;
     }
@@ -48,6 +88,10 @@
     max-height: 24rem;
     height: 100%;
     z-index: -1;
+
+    @media screen and (max-width: $sm-screen-max) {
+      display: none;
+    }
   }
 
   &.left-img {
