--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -1,9 +1,18 @@
 .services-component {
   margin-bottom: 20rem;
+  padding: 0 2rem;
+
+  @media screen and (max-width: $sm-screen) {
+    margin-bottom: 10rem;
+  }
 
   .services-intro {
     text-align: center;
     margin-bottom: 8rem;
+
+    @media screen and (max-width: $md-screen) {
+      margin-bottom: 4rem;
+    }
   }
 
   .title {
@@ -11,20 +20,34 @@
     color: $color-white;
     font-family: $montserrat;
     font-weight: bold;
+
+    @media screen and (max-width: $sm-screen) {
+      font-size: 3rem;
+    }
   }
 
   .subtitle {
     margin-top: 2rem;
+
+    @media screen and (max-width: $sm-screen) {
+      font-size: 1.6rem;
+    }
   }
 
   .service-cards {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     gap: 4rem;
+
+    @media screen and (max-width: 1600px) {
+      gap: 2rem;
+    }
   }
 
   .card {
-    padding: 4rem 3rem;
+    flex: 1 0 20rem;
+    padding: 4rem 2rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -32,6 +55,10 @@
     align-items: center;
     border-radius: 2rem;
     border: 0.2rem solid $primary-color;
+
+    @media screen and (max-width: 1600px) {
+      flex: 1 0 18rem;
+    }
   }
 
   .card-img {
@@ -45,11 +72,12 @@
   }
 
   .service-title {
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-weight: 500;
   }
 
   .service-description {
     text-align: center;
+    font-size: 1.6rem;
   }
 }
