--- a/src/scss/shared/_container.scss
+++ b/src/scss/shared/_container.scss
@@ -12,34 +12,31 @@
       width: 100%;
       max-height: 55rem;
       height: 100%;
+
+      @media screen and (max-width: $lg-screen) {
+        max-width: 16rem;
+        max-height: 30rem;
+      }
+
+      @media screen and (max-width: $lg-screen) {
+        display: none;
+      }
     }
   }
 
-  // @media screen and (max-width: 1600px) {
-  //   max-width: 110rem;
-  // }
+  @media screen and (max-width: 1600px) {
+    max-width: 110rem;
+  }
 
-  // @media screen and (max-width: 1440px) {
-  //   max-width: 100rem;
-  // }
-
-  // @media screen and (max-width: 1280px) {
-  //   max-width: 80rem;
-  // }
+  @media screen and (max-width: $max-width) {
+    max-width: 100rem;
+  }
 
   @media screen and (max-width: $lg-screen) {
+    max-width: 80rem;
+  }
+
+  @media screen and (max-width: $sm-screen) {
     max-width: 60rem;
-  }
-
-  @media screen and (max-width: $xs-screen-max) {
-    max-width: 50rem;
-  }
-
-  // @media screen and (max-width: 640px) {
-  //   max-width: 40rem;
-  // }
-
-  @media screen and (max-width: $xs-screen-mid) {
-    max-width: 30rem;
   }
 }
