--- a/src/scss/shared/_form.scss
+++ b/src/scss/shared/_form.scss
@@ -6,8 +6,13 @@
   display: flex;
   justify-content: space-between;
 
+  @media screen and (max-width: $sm-screen) {
+    flex-direction: column;
+    margin-bottom: 10rem;
+  }
+
   .form-text-box {
-    padding-left: 5rem;
+    padding: 3rem 5rem;
     margin: auto 0;
   }
 
@@ -16,6 +21,10 @@
     color: $color-black;
     font-weight: 600;
     margin-bottom: 2.5rem;
+
+    @media screen and (max-width: $sm-screen) {
+      font-size: 1.8rem;
+    }
   }
 
   .cta-form {
@@ -27,6 +36,11 @@
   .personal-info {
     display: flex;
     gap: 5rem;
+
+    @media screen and (max-width: $sm-screen) {
+      flex-direction: column;
+      gap: 2.5rem;
+    }
   }
 
   .form-item {
@@ -38,6 +52,10 @@
     label {
       font-size: 1.6rem;
       color: $color-black;
+
+      @media screen and (max-width: $sm-screen) {
+        font-size: 1.4rem;
+      }
     }
 
     input,
@@ -67,10 +85,22 @@
     max-width: 65rem;
     max-height: 52rem;
 
+    @media screen and (max-width: 1600px) {
+      max-width: 38rem;
+    }
+
+    @media screen and (max-width: $sm-screen) {
+      max-width: 100%;
+    }
+
     img {
       width: 100%;
       height: 100%;
       border-radius: 0 2rem 2rem 0;
+
+      @media screen and (max-width: $sm-screen) {
+        border-radius: 0 0 2rem 2rem;
+      }
     }
   }
 }
