--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import "shared/form";
 @import "shared/book-appointment";
 @import "shared/base";
+@import "shared/testimonial";
 
 @import "components/hero";
 @import "components/services";
