--- a/src/scss/shared/_buttons.scss
+++ b/src/scss/shared/_buttons.scss
@@ -5,6 +5,7 @@
   padding: 1.3rem 3rem;
   border-radius: 10rem;
   font-weight: 500;
+  white-space: nowrap;
 
   &:hover {
     background-color: $primary-color-hover;
