--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -1,9 +1,18 @@
 .team-component {
-  margin-bottom: 25rem;
+  margin-bottom: 20rem;
+  padding: 0 2rem;
+
+  @media screen and (max-width: $sm-screen) {
+    margin-bottom: 10rem;
+  }
 
   .team-intro {
     text-align: center;
     margin-bottom: 8rem;
+
+    @media screen and (max-width: $sm-screen) {
+      margin-bottom: 4rem;
+    }
   }
 
   .title {
@@ -11,10 +20,18 @@
     color: $color-white;
     font-family: $montserrat;
     font-weight: bold;
+
+    @media screen and (max-width: $sm-screen) {
+      font-size: 3rem;
+    }
   }
 
   .subtitle {
     margin-top: 2rem;
+
+    @media screen and (max-width: $sm-screen) {
+      font-size: 1.6rem;
+    }
   }
 
   .member-card {
@@ -155,70 +172,22 @@
     gap: 2rem 3rem;
   }
 
-  // @media screen and (max-width: 1280px) {
-  //   .title {
-  //     font-size: 4.4rem;
-  //   }
+  .show-more {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    font-weight: 500;
+    color: $primary-color;
+    margin-top: 2rem;
+    cursor: pointer;
 
-  //   .blog {
-  //     row-gap: 1.5rem;
+    &:hover {
+      text-decoration: underline;
+      color: $primary-color;
+    }
+  }
 
-  //     .news-card:nth-child(1) {
-  //       grid-area: 1/1/3/5;
-
-  //       .news-title {
-  //         font-size: 2rem;
-  //       }
-
-  //       .news-details-content {
-  //         font-size: 1.6rem;
-  //       }
-
-  //       .news-description {
-  //         width: 95%;
-  //       }
-  //     }
-
-  //     .news-card:nth-child(2) {
-  //       grid-area: 3/1/4/3;
-  //     }
-  //   }
-
-  //   .blog-article {
-  //     grid-area: 3/3/4/5;
-  //   }
-  // }
-
-  // @media screen and (max-width: 810px) {
-  //   .title {
-  //     font-size: 4rem;
-  //     margin-bottom: 5rem;
-  //   }
-
-  //   .blog {
-  //     grid-template-rows: repeat(3, 25rem);
-
-  //     .news-card:nth-child(1) {
-  //       grid-area: 1/1/2/5;
-  //     }
-
-  //     .news-card:nth-child(2) {
-  //       grid-area: 2/1/3/5;
-  //     }
-  //   }
-
-  //   .blog-article {
-  //     grid-area: 3/1/4/5;
-  //   }
-
-  //   .more-articles {
-  //     grid-auto-rows: 25rem;
-  //   }
-  // }
-
-  // @media screen and (max-width: 414px) {
-  //   .title {
-  //     font-size: 3rem;
-  //   }
-  // }
+  .show-section {
+    display: none;
+  }
 }
