--- a/src/scss/shared/_footer.scss
+++ b/src/scss/shared/_footer.scss
@@ -1,7 +1,6 @@
 .footer {
   background-color: $primary-color;
-  width: 100%;
-  padding: 6rem 0;
+  padding: 6rem 2rem;
 
   .logo {
     width: 20rem;
@@ -16,6 +15,26 @@
   .footer-links {
     display: flex;
     gap: 20rem;
+    flex-wrap: wrap;
+    padding-right: 2rem;
+
+    @media screen and (max-width: 1600px) {
+      gap: 15rem;
+    }
+
+    @media screen and (max-width: $max-width) {
+      gap: 10rem;
+    }
+
+    @media screen and (max-width: $lg-screen) {
+      gap: 5rem;
+    }
+
+    @media screen and (max-width: 540px) {
+      flex-direction: column;
+      gap: 6rem;
+      padding-left: 3rem;
+    }
   }
 
   .footer-list {
@@ -27,12 +46,19 @@
   .title-list {
     color: $color-black;
     font-weight: bold;
+
+    @media screen and (max-width: $lg-screen) {
+      font-size: 1.6rem;
+    }
   }
 
   .item-list {
     text-decoration: none;
     color: $color-black;
-    width: 13rem;
+
+    @media screen and (max-width: $lg-screen) {
+      font-size: 1.6rem;
+    }
 
     &:hover {
       font-weight: 500;
