--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,3 +14,5 @@
 @import "components/services";
 @import "components/faq";
 @import "components/team";
+@import "components/working-hours";
+@import "components/price";
