--- a/src/scss/components/_faq.scss
+++ b/src/scss/components/_faq.scss
@@ -2,7 +2,7 @@
   margin-bottom: 20rem;
   padding: 0 2rem;
 
-  @media screen and (max-width: $sm-screen) {
+  @media screen and (max-width: $md-screen) {
     margin-bottom: 10rem;
   }
 
@@ -13,9 +13,12 @@
     line-height: 6rem;
     font-weight: bold;
 
+    @media screen and (max-width: $md-screen) {
+      margin-bottom: 4rem;
+    }
+
     @media screen and (max-width: $sm-screen) {
       font-size: 3rem;
-      margin-bottom: 4rem;
     }
   }
 
