--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -2,7 +2,7 @@
   margin-bottom: 20rem;
   padding: 0 2rem;
 
-  @media screen and (max-width: $sm-screen) {
+  @media screen and (max-width: $md-screen) {
     margin-bottom: 10rem;
   }
 
@@ -10,7 +10,7 @@
     text-align: center;
     margin-bottom: 8rem;
 
-    @media screen and (max-width: $sm-screen) {
+    @media screen and (max-width: $md-screen) {
       margin-bottom: 4rem;
     }
   }
