--- a/src/scss/shared/_book-appointment.scss
+++ b/src/scss/shared/_book-appointment.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
 
-  @media screen and (max-width: $sm-screen) {
+  @media screen and (max-width: $md-screen) {
     margin-bottom: 10rem;
   }
 
