--- a/src/scss/shared/_testimonial.scss
+++ b/src/scss/shared/_testimonial.scss
@@ -2,7 +2,7 @@
   margin-bottom: 20rem;
   padding: 0 2rem;
 
-  @media screen and (max-width: $sm-screen) {
+  @media screen and (max-width: $md-screen) {
     margin-bottom: 10rem;
   }
 
@@ -20,6 +20,11 @@
   .swiper-wrapper {
     padding-bottom: 20rem;
     padding-top: 18rem;
+
+    @media screen and (max-width: $md-screen) {
+      padding-top: 15rem;
+      padding-bottom: 15rem;
+    }
 
     .swiper-slide {
       display: flex;
