--- a/src/scss/components/_price.scss
+++ b/src/scss/components/_price.scss
@@ -1,6 +1,6 @@
 .price-container {
   position: relative;
-  background-image: url("../img/barber-shop-sign.jpg");
+  background-image: url("../img/sections-img/barber-shop-sign.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 70rem;
