--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,3 +16,5 @@
 @import "components/team";
 @import "components/working-hours";
 @import "components/price";
+@import "components/gallery";
+@import "components/member-page-hero";
