--- a/src/scss/shared/_book-appointment.scss
+++ b/src/scss/shared/_book-appointment.scss
@@ -1,6 +1,6 @@
 .book-appointment {
   position: relative;
-  background-image: url("../img/book-appoinment.jpg");
+  background-image: url("../img/sections-img/book-appoinment.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 50rem;
