--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -85,6 +85,19 @@
       width: 100%;
       height: 100%;
     }
+
+    &.member-img {
+      max-height: 50rem;
+
+      @media screen and (max-width: 1600px) {
+        max-height: 70rem;
+      }
+
+      @media screen and (max-width: $lg-screen) {
+        margin: 0 auto;
+        max-width: 30rem;
+      }
+    }
   }
 
   .img-shadow {
