--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -68,7 +68,7 @@ h6 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 13rem;
+  gap: 10rem;
 }
 @media screen and (max-width: 1400px) {
   .navigation-component .menu {
@@ -431,7 +431,7 @@ h6 {
 
 .book-appointment {
   position: relative;
-  background-image: url("../img/book-appoinment.jpg");
+  background-image: url("../img/sections-img/book-appoinment.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 50rem;
@@ -795,6 +795,20 @@ body {
   border: 2px solid #f4ce14;
   width: 100%;
   height: 100%;
+}
+.hero-component .hero-img.member-img {
+  max-height: 50rem;
+}
+@media screen and (max-width: 1600px) {
+  .hero-component .hero-img.member-img {
+    max-height: 70rem;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .hero-component .hero-img.member-img {
+    margin: 0 auto;
+    max-width: 30rem;
+  }
 }
 .hero-component .img-shadow {
   background-color: #f4ce14;
@@ -1287,7 +1301,7 @@ body {
 
 .price-container {
   position: relative;
-  background-image: url("../img/barber-shop-sign.jpg");
+  background-image: url("../img/sections-img/barber-shop-sign.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 70rem;
@@ -1384,5 +1398,196 @@ body {
 @media screen and (max-width: 768px) {
   .price-container .price {
     font-size: 1.6rem;
+  }
+}
+
+.gallery-photo-container {
+  margin-bottom: 20rem;
+  padding: 0 2rem;
+}
+@media screen and (max-width: 992px) {
+  .gallery-photo-container {
+    margin-bottom: 10rem;
+  }
+}
+.gallery-photo-container .title {
+  font-size: 4.8rem;
+  font-weight: bold;
+  text-align: center;
+}
+@media screen and (max-width: 768px) {
+  .gallery-photo-container .title {
+    font-size: 3rem;
+  }
+}
+.gallery-photo-container .photos {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  grid-gap: 2.5rem;
+  margin-top: 8rem;
+}
+@media screen and (max-width: 992px) {
+  .gallery-photo-container .photos {
+    margin-top: 4rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .gallery-photo-container .photos {
+    grid-gap: 1rem;
+    margin-top: 4rem;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.gallery-photo-container .photos img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: transform 0.3s ease;
+}
+.gallery-photo-container .photos img:hover {
+  transform: scale(1.03);
+}
+.gallery-photo-container .photos .gallery-img1 {
+  grid-area: 1/1/3/3;
+}
+@media screen and (max-width: 768px) {
+  .gallery-photo-container .photos .gallery-img1 {
+    grid-area: span 1/span 1;
+  }
+}
+.gallery-photo-container .photos .gallery-img2 {
+  grid-area: 1/3/3/4;
+}
+@media screen and (max-width: 768px) {
+  .gallery-photo-container .photos .gallery-img2 {
+    grid-area: span 2/span 1;
+  }
+}
+.gallery-photo-container .photos .gallery-img3 {
+  grid-area: 1/4/3/5;
+}
+@media screen and (max-width: 768px) {
+  .gallery-photo-container .photos .gallery-img3 {
+    grid-area: span 2/span 1;
+  }
+}
+.gallery-photo-container .photos .gallery-img4 {
+  grid-area: 3/1/5/2;
+}
+@media screen and (max-width: 768px) {
+  .gallery-photo-container .photos .gallery-img4 {
+    grid-area: span 2/span 1;
+  }
+}
+.gallery-photo-container .photos .gallery-img5 {
+  grid-area: 3/2/7/3;
+}
+@media screen and (max-width: 768px) {
+  .gallery-photo-container .photos .gallery-img5 {
+    grid-area: span 4/span 1;
+  }
+}
+.gallery-photo-container .photos .gallery-img6 {
+  grid-area: 3/3/5/5;
+}
+@media screen and (max-width: 768px) {
+  .gallery-photo-container .photos .gallery-img6 {
+    grid-area: span 2/span 2;
+  }
+}
+.gallery-photo-container .photos .gallery-img7 {
+  grid-area: 5/1/7/2;
+}
+@media screen and (max-width: 768px) {
+  .gallery-photo-container .photos .gallery-img7 {
+    grid-area: span 2/span 1;
+  }
+}
+.gallery-photo-container .photos .gallery-img8 {
+  grid-area: 5/3/7/4;
+}
+@media screen and (max-width: 768px) {
+  .gallery-photo-container .photos .gallery-img8 {
+    grid-area: span 2/span 1;
+  }
+}
+.gallery-photo-container .photos .gallery-img9 {
+  grid-area: 5/4/7/5;
+}
+@media screen and (max-width: 768px) {
+  .gallery-photo-container .photos .gallery-img9 {
+    grid-area: 5/2/7/3;
+  }
+}
+
+.member-page {
+  position: relative;
+  margin-bottom: 40rem;
+}
+@media screen and (max-width: 992px) {
+  .member-page {
+    margin-bottom: 25rem;
+  }
+}
+
+.member-info {
+  position: absolute;
+  top: 70rem;
+  background-color: #424141;
+  height: 20rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 1;
+  width: 100%;
+}
+@media screen and (max-width: 1024px) {
+  .member-info {
+    top: 65rem;
+  }
+}
+@media screen and (max-width: 992px) {
+  .member-info {
+    top: 85rem;
+  }
+}
+@media screen and (max-width: 414px) {
+  .member-info {
+    flex-direction: column;
+    justify-content: center;
+    gap: 2.5rem;
+    top: 95rem;
+    height: 30rem;
+  }
+}
+.member-info .content-member-info {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  align-items: center;
+}
+@media screen and (max-width: 1024px) {
+  .member-info .content-member-info {
+    gap: 0.5rem;
+  }
+}
+.member-info .number {
+  font-size: 4.8rem;
+  font-weight: bold;
+}
+@media screen and (max-width: 768px) {
+  .member-info .number {
+    font-size: 3rem;
+  }
+}
+.member-info .info {
+  font-size: 2.4rem;
+  font-weight: bold;
+}
+@media screen and (max-width: 768px) {
+  .member-info .info {
+    font-size: 1.8rem;
   }
 }/*# sourceMappingURL=main.css.map */
